feat: implement paimon custom catalog repositories (#37)