@@ -1,13 +1,18 @@
 package kasanari.catalog.paimon;
 
+import org.apache.paimon.Snapshot;
+import org.apache.paimon.catalog.Catalog;
 import org.apache.paimon.catalog.Identifier;
+import org.apache.paimon.consumer.ConsumerInfo;
+import org.apache.paimon.data.BinaryString;
+import org.apache.paimon.data.GenericRow;
 import org.apache.paimon.function.FunctionDefinition;
+import org.apache.paimon.partition.PartitionStatistics;
 import org.apache.paimon.rest.requests.AlterDatabaseRequest;
 import org.apache.paimon.rest.requests.AlterFunctionRequest;
 import org.apache.paimon.rest.requests.AlterTableRequest;
 import org.apache.paimon.rest.requests.AlterViewRequest;
 import org.apache.paimon.rest.requests.AuthTableQueryRequest;
-import org.apache.paimon.rest.requests.CommitTableRequest;
 import org.apache.paimon.rest.requests.CreateBranchRequest;
 import org.apache.paimon.rest.requests.CreateDatabaseRequest;
 import org.apache.paimon.rest.requests.CreateFunctionRequest;
@@ -23,7 +28,10 @@ import org.apache.paimon.rest.requests.RenameTableRequest;
 import org.apache.paimon.rest.requests.ResetConsumerRequest;
 import org.apache.paimon.rest.requests.RollbackSchemaRequest;
 import org.apache.paimon.rest.requests.RollbackTableRequest;
+import org.apache.paimon.rest.responses.GetFunctionResponse;
+import org.apache.paimon.rest.responses.GetViewResponse;
 import org.apache.paimon.schema.Schema;
+import org.apache.paimon.schema.SchemaChange;
 import org.apache.paimon.table.Instant;
 import org.apache.paimon.types.DataField;
 import org.apache.paimon.types.DataTypes;
@@ -39,8 +47,11 @@ import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assumptions.assumeTrue;
@@ -186,14 +197,6 @@ public abstract class PaimonCatalogAdapterTest {
         return "/tmp/" + database + "/" + table;
     }
 
-    protected String existingTableIdWithNamespace() {
-        return null;
-    }
-
-    protected String existingTableIdWithoutNamespace() {
-        return null;
-    }
-
     @Test
     void listDatabases() {
         assumeTrue(supportsDatabases());
@@ -209,8 +212,15 @@ public abstract class PaimonCatalogAdapterTest {
         assumeTrue(supportsDatabases());
 
         var request = new CreateDatabaseRequest(database, Map.of("owner", "test"));
+        catalog.createDatabase(prefix, request);
 
-        assertDoesNotThrow(() -> catalog.createDatabase(prefix, request));
+        var created = catalog.getDatabase(prefix, database);
+
+        assertEquals(database, created.getName());
+
+        if (created.getOptions().containsKey("owner")) {
+            assertEquals("test", created.getOptions().get("owner"));
+        }
     }
 
     @Test
@@ -232,8 +242,9 @@ public abstract class PaimonCatalogAdapterTest {
 
         var createDatabaseRequest = new CreateDatabaseRequest(database, Collections.emptyMap());
         catalog.createDatabase(prefix, createDatabaseRequest);
+        catalog.dropDatabase(prefix, database);
 
-        assertDoesNotThrow(() -> catalog.dropDatabase(prefix, database));
+        assertFalse(catalog.listDatabases(prefix, 100, null).getDatabases().contains(database));
     }
 
     @Test
@@ -244,7 +255,8 @@ public abstract class PaimonCatalogAdapterTest {
         var alterDatabaseRequest = new AlterDatabaseRequest(List.of("owner"), Map.of("owner", "updated"));
         catalog.createDatabase(prefix, createDatabaseRequest);
 
-        assertTrue(catalog.alterDatabase(prefix, database, alterDatabaseRequest).getUpdated().contains("owner"));
+        var result = catalog.alterDatabase(prefix, database, alterDatabaseRequest);
+        assertTrue(result.getUpdated().contains("owner"));
     }
 
     @Test
@@ -268,8 +280,9 @@ public abstract class PaimonCatalogAdapterTest {
         var createDatabaseRequest = new CreateDatabaseRequest(database, Collections.emptyMap());
         var registerTableRequest = new RegisterTableRequest(Identifier.create(database, table), registeredTablePath(database, table));
         catalog.createDatabase(prefix, createDatabaseRequest);
+        catalog.registerTable(prefix, database, registerTableRequest);
 
-        assertDoesNotThrow(() -> catalog.registerTable(prefix, database, registerTableRequest));
+        assertEquals(table, catalog.getTable(prefix, database, table).getName());
     }
 
     @Test
@@ -291,8 +304,9 @@ public abstract class PaimonCatalogAdapterTest {
         var createDatabaseRequest = new CreateDatabaseRequest(database, Collections.emptyMap());
         var createTableRequest = new CreateTableRequest(Identifier.create(database, table), tableSchema());
         catalog.createDatabase(prefix, createDatabaseRequest);
+        catalog.createTable(prefix, database, createTableRequest);
 
-        assertDoesNotThrow(() -> catalog.createTable(prefix, database, createTableRequest));
+        assertEquals(table, catalog.getTable(prefix, database, table).getName());
     }
 
     @Test
@@ -321,33 +335,8 @@ public abstract class PaimonCatalogAdapterTest {
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createTable(prefix, database, createTableRequest);
 
-        var result = catalog.listTablesGlobally(prefix, database, table, 100, null)
-                .getTables()
-                .contains(Identifier.create(database, table));
-
-        assertTrue(result);
-    }
-
-    @Test
-    void getTableByIdWithNamespace() {
-        assumeTrue(supportsTables() && supportsGetTableByIdWithNamespace());
-        var tableId = existingTableIdWithNamespace();
-        assumeTrue(tableId != null && !tableId.isBlank());
-
-        var expected = tableId;
-        var result = catalog.getTableById(prefix, tableId).getId();
-
-        assertEquals(expected, result);
-    }
-
-    @Test
-    void getTableByIdWithoutNamespace() {
-        assumeTrue(supportsTables() && supportsGetTableByIdWithoutNamespace());
-        var tableId = existingTableIdWithoutNamespace();
-        assumeTrue(tableId != null && !tableId.isBlank());
-
-        var expected = tableId;
-        var result = catalog.getTableById(prefix, tableId).getId();
+        var expected = List.of(Identifier.create(database, table));
+        var result = catalog.listTablesGlobally(prefix, database, table, 100, null).getTables();
 
         assertEquals(expected, result);
     }
@@ -376,8 +365,9 @@ public abstract class PaimonCatalogAdapterTest {
         var alterTableRequest = new AlterTableRequest(Collections.emptyList());
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createTable(prefix, database, createTableRequest);
+        catalog.alterTable(prefix, database, table, alterTableRequest);
 
-        assertDoesNotThrow(() -> catalog.alterTable(prefix, database, table, alterTableRequest));
+        assertEquals(table, catalog.getTable(prefix, database, table).getName());
     }
 
     @Test
@@ -389,8 +379,9 @@ public abstract class PaimonCatalogAdapterTest {
         var alterTableRequest = new AlterTableRequest(null);
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createTable(prefix, database, createTableRequest);
+        catalog.alterTable(prefix, database, table, alterTableRequest);
 
-        assertDoesNotThrow(() -> catalog.alterTable(prefix, database, table, alterTableRequest));
+        assertEquals(table, catalog.getTable(prefix, database, table).getName());
     }
 
     @Test
@@ -401,8 +392,9 @@ public abstract class PaimonCatalogAdapterTest {
         var createTableRequest = new CreateTableRequest(Identifier.create(database, table), tableSchema());
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createTable(prefix, database, createTableRequest);
+        catalog.dropTable(prefix, database, table);
 
-        assertDoesNotThrow(() -> catalog.dropTable(prefix, database, table));
+        assertFalse(catalog.listTables(prefix, database, 100, null, null).getTables().contains(table));
     }
 
     @Test
@@ -414,37 +406,39 @@ public abstract class PaimonCatalogAdapterTest {
         var renameTableRequest = new RenameTableRequest(Identifier.create(database, table), Identifier.create(database, renamedTable));
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createTable(prefix, database, createTableRequest);
+        catalog.renameTable(prefix, renameTableRequest);
 
-        assertDoesNotThrow(() -> catalog.renameTable(prefix, renameTableRequest));
+        var tables = catalog.listTables(prefix, database, 100, null, null).getTables();
+        assertFalse(tables.contains(table));
+        assertTrue(tables.contains(renamedTable));
     }
 
     @Test
     void commitTable() {
         assumeTrue(supportsDatabases() && supportsTables() && supportsTableMutations() && supportCommit());
 
-        var createDatabaseRequest = new CreateDatabaseRequest(database, Collections.emptyMap());
-        var createTableRequest = new CreateTableRequest(Identifier.create(database, table), tableSchema());
-        var commitTableRequest = new CommitTableRequest(table, null, null);
-        catalog.createDatabase(prefix, createDatabaseRequest);
-        catalog.createTable(prefix, database, createTableRequest);
+        createDatabaseAndTable();
 
-        var expected = true;
-        var result = catalog.commitTable(prefix, database, table, commitTableRequest) != null;
+        // commitTable (commitSnapshot) is triggered internally via table.commit operation
+        var latestSnapshotBeforeCommit = catalog.getVersionSnapshot(prefix, database, table, "LATEST").getSnapshot();
+        triggerTableSnapshot(database, table);
+        var latestSnapshotAfterCommit = catalog.getVersionSnapshot(prefix, database, table, "LATEST").getSnapshot();
 
-        assertEquals(expected, result);
+        assertNull(latestSnapshotBeforeCommit);
+        assertNotNull(latestSnapshotAfterCommit);
     }
 
     @Test
     void rollbackTable() {
         assumeTrue(supportsDatabases() && supportsTables() && supportsTableMutations() && supportRollbackTable());
 
-        var createDatabaseRequest = new CreateDatabaseRequest(database, Collections.emptyMap());
-        var createTableRequest = new CreateTableRequest(Identifier.create(database, table), tableSchema());
-        var rollbackTableRequest = new RollbackTableRequest(Instant.snapshot(1L), null);
-        catalog.createDatabase(prefix, createDatabaseRequest);
-        catalog.createTable(prefix, database, createTableRequest);
+        createDatabaseAndTable();
+        triggerTableSnapshot(database, table);
+        var snapshotId = catalog.getVersionSnapshot(prefix, database, table, "LATEST").getSnapshot().id();
+        var rollbackTableRequest = new RollbackTableRequest(Instant.snapshot(snapshotId), null);
+        catalog.rollbackTable(prefix, database, table, rollbackTableRequest);
 
-        assertDoesNotThrow(() -> catalog.rollbackTable(prefix, database, table, rollbackTableRequest));
+        assertEquals(snapshotId, catalog.getVersionSnapshot(prefix, database, table, "LATEST").getSnapshot().id());
     }
 
     @Test
@@ -453,11 +447,59 @@ public abstract class PaimonCatalogAdapterTest {
 
         var createDatabaseRequest = new CreateDatabaseRequest(database, Collections.emptyMap());
         var createTableRequest = new CreateTableRequest(Identifier.create(database, table), tableSchema());
-        var rollbackSchemaRequest = new RollbackSchemaRequest(1L);
+        var alterTableRequest = new AlterTableRequest(List.of(
+                SchemaChange.addColumn("newField", DataTypes.INT())
+        ));
+
+        var rollbackSchemaRequest = new RollbackSchemaRequest(0L);
+        catalog.createDatabase(prefix, createDatabaseRequest);
+        catalog.createTable(prefix, database, createTableRequest);
+        catalog.alterTable(prefix, database, table, alterTableRequest);
+        catalog.rollbackSchema(prefix, database, table, rollbackSchemaRequest);
+
+        assertEquals(table, catalog.getTable(prefix, database, table).getName());
+    }
+
+    @Test
+    void rollbackSchemaShouldFailOnAttemptToRollbackOnDeletedSchema() {
+        assumeTrue(supportsDatabases() && supportsTables() && supportsTableMutations() && supportRollbackSchema());
+
+        var createDatabaseRequest = new CreateDatabaseRequest(database, Collections.emptyMap());
+        var createTableRequest = new CreateTableRequest(Identifier.create(database, table), tableSchema());
+        var alterTableRequest = new AlterTableRequest(List.of(
+                SchemaChange.addColumn("newField", DataTypes.INT())
+        ));
+
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createTable(prefix, database, createTableRequest);
 
-        assertDoesNotThrow(() -> catalog.rollbackSchema(prefix, database, table, rollbackSchemaRequest));
+        // 2 schemas (0, 1) existing
+        catalog.alterTable(prefix, database, table, alterTableRequest);
+
+        // 1 schemas (0) existing
+        assertDoesNotThrow(() -> catalog.rollbackSchema(prefix, database, table, new RollbackSchemaRequest(0L)));
+        assertThrows(RuntimeException.class, () -> catalog.rollbackSchema(prefix, database, table, new RollbackSchemaRequest(1L)));
+    }
+
+    @Test
+    void rollbackSchemaShouldFailOnAttemptToRollbackToPreviousSchemaIfNewOneAlreadyHasRelatedSnapshot() {
+        assumeTrue(supportsDatabases() && supportsTables() && supportsTableMutations() && supportRollbackSchema());
+
+        var createDatabaseRequest = new CreateDatabaseRequest(database, Collections.emptyMap());
+        var createTableRequest = new CreateTableRequest(Identifier.create(database, table), tableSchema());
+        var alterTableRequest = new AlterTableRequest(List.of(
+                SchemaChange.addColumn("newField", DataTypes.INT())
+        ));
+
+        catalog.createDatabase(prefix, createDatabaseRequest);
+        catalog.createTable(prefix, database, createTableRequest);
+
+        // 2 schemas (0, 1) existing
+        catalog.alterTable(prefix, database, table, alterTableRequest);
+        triggerTableSnapshotAltered(database, table);
+
+        // failed attempt to roll back to previous schema
+        assertThrows(RuntimeException.class, () -> catalog.rollbackSchema(prefix, database, table, new RollbackSchemaRequest(0L)));
     }
 
     @Test
@@ -476,22 +518,20 @@ public abstract class PaimonCatalogAdapterTest {
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createTable(prefix, database, createTableRequest);
 
-        var expected = true;
-        var result = catalog.authTableQuery(prefix, database, table, authTableQueryRequest) != null;
-
-        assertEquals(expected, result);
+        assertNotNull(catalog.authTableQuery(prefix, database, table, authTableQueryRequest));
     }
 
     @Test
     void getTableSnapshot() {
         assumeTrue(supportsDatabases() && supportsTables() && supportSnapshot());
 
-        var createDatabaseRequest = new CreateDatabaseRequest(database, Collections.emptyMap());
-        var createTableRequest = new CreateTableRequest(Identifier.create(database, table), tableSchema());
-        catalog.createDatabase(prefix, createDatabaseRequest);
-        catalog.createTable(prefix, database, createTableRequest);
+        createDatabaseAndTable();
+        triggerTableSnapshot(database, table);
+        var latestSnapshot = catalog.getVersionSnapshot(prefix, database, table, "LATEST").getSnapshot();
+        var result = catalog.getTableSnapshot(prefix, database, table).getSnapshot();
 
-        assertDoesNotThrow(() -> catalog.getTableSnapshot(prefix, database, table));
+        assertNotNull(result);
+        assertEquals(latestSnapshot.id(), result.snapshot().id());
     }
 
     @Test
@@ -502,8 +542,12 @@ public abstract class PaimonCatalogAdapterTest {
         var createTableRequest = new CreateTableRequest(Identifier.create(database, table), tableSchema());
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createTable(prefix, database, createTableRequest);
+        triggerTableSnapshot(database, table);
+        var latestSnapshot = catalog.getVersionSnapshot(prefix, database, table, "LATEST").getSnapshot();
+        var result = catalog.getVersionSnapshot(prefix, database, table, "LATEST").getSnapshot();
 
-        assertDoesNotThrow(() -> catalog.getVersionSnapshot(prefix, database, table, "main"));
+        assertNotNull(result);
+        assertEquals(latestSnapshot.id(), result.id());
     }
 
     @Test
@@ -514,11 +558,13 @@ public abstract class PaimonCatalogAdapterTest {
         var createTableRequest = new CreateTableRequest(Identifier.create(database, table), tableSchema());
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createTable(prefix, database, createTableRequest);
+        triggerTableSnapshot(database, table);
 
-        var expected = Collections.emptyList();
+        var expected = List.of(catalog.getVersionSnapshot(prefix, database, table, "LATEST").getSnapshot().id());
         var result = catalog.listSnapshots(prefix, database, table, 100, null).getSnapshots();
+        var resultIds = result.stream().map(Snapshot::id).toList();
 
-        assertEquals(expected, result);
+        assertEquals(expected, resultIds);
     }
 
     @Test
@@ -526,14 +572,18 @@ public abstract class PaimonCatalogAdapterTest {
         assumeTrue(supportsDatabases() && supportsTables() && supportsPartitions());
 
         var createDatabaseRequest = new CreateDatabaseRequest(database, Collections.emptyMap());
-        var createTableRequest = new CreateTableRequest(Identifier.create(database, table), tableSchema());
+        var createTableRequest = new CreateTableRequest(Identifier.create(database, table), partitionedTableSchema());
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createTable(prefix, database, createTableRequest);
+        triggerPartitionedTableSnapshot(database, table, 1, "dt_a");
+        triggerPartitionedTableSnapshot(database, table, 2, "dt_b");
 
-        var expected = Collections.emptyList();
         var result = catalog.listPartitions(prefix, database, table, 100, null, null).getPartitions();
+        var specs = result.stream().map(PartitionStatistics::spec).toList();
 
-        assertEquals(expected, result);
+        assertEquals(2, result.size());
+        assertTrue(specs.contains(Map.of("dt", "dt_a")));
+        assertTrue(specs.contains(Map.of("dt", "dt_b")));
     }
 
     @Test
@@ -541,12 +591,20 @@ public abstract class PaimonCatalogAdapterTest {
         assumeTrue(supportsDatabases() && supportsTables() && supportsPartitions());
 
         var createDatabaseRequest = new CreateDatabaseRequest(database, Collections.emptyMap());
-        var createTableRequest = new CreateTableRequest(Identifier.create(database, table), tableSchema());
-        var markDonePartitionsRequest = new MarkDonePartitionsRequest(Collections.emptyList());
+        var createTableRequest = new CreateTableRequest(Identifier.create(database, table), partitionedTableSchema());
+        var markDonePartitionsRequest = new MarkDonePartitionsRequest(List.of(Map.of("dt", "dt_a")));
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createTable(prefix, database, createTableRequest);
+        triggerPartitionedTableSnapshot(database, table, 1, "dt_a");
+        catalog.markDonePartitions(prefix, database, table, markDonePartitionsRequest);
+        var result = catalog.listPartitions(prefix, database, table, 100, null, null).getPartitions();
+        var partition = result.stream()
+                .filter(it -> Map.of("dt", "dt_a").equals(it.spec()))
+                .findFirst()
+                .orElse(null);
 
-        assertDoesNotThrow(() -> catalog.markDonePartitions(prefix, database, table, markDonePartitionsRequest));
+        assertNotNull(partition);
+        assertTrue(partition.done());
     }
 
     @Test
@@ -554,15 +612,107 @@ public abstract class PaimonCatalogAdapterTest {
         assumeTrue(supportsDatabases() && supportsTables() && supportsPartitions());
 
         var createDatabaseRequest = new CreateDatabaseRequest(database, Collections.emptyMap());
-        var createTableRequest = new CreateTableRequest(Identifier.create(database, table), tableSchema());
-        var listPartitionsByNamesRequest = new ListPartitionsByNamesRequest(Collections.emptyList());
+        var createTableRequest = new CreateTableRequest(Identifier.create(database, table), partitionedTableSchema());
+        var listPartitionsByNamesRequest = new ListPartitionsByNamesRequest(List.of(Map.of("dt", "dt_a")));
+        catalog.createDatabase(prefix, createDatabaseRequest);
+        catalog.createTable(prefix, database, createTableRequest);
+        triggerPartitionedTableSnapshot(database, table, 1, "dt_a");
+        triggerPartitionedTableSnapshot(database, table, 2, "dt_b");
+
+        var result = catalog.listPartitionsByNames(prefix, database, table, listPartitionsByNamesRequest).getPartitions();
+        var specs = result.stream().map(PartitionStatistics::spec).toList();
+
+        assertEquals(1, result.size());
+        assertEquals(List.of(Map.of("dt", "dt_a")), specs);
+    }
+
+    @Test
+    void createPartitions() {
+        assumeTrue(supportsDatabases() && supportsTables() && supportsPartitions());
+
+        var createDatabaseRequest = new CreateDatabaseRequest(database, Collections.emptyMap());
+        var createTableRequest = new CreateTableRequest(Identifier.create(database, table), partitionedTableSchema());
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createTable(prefix, database, createTableRequest);
 
-        var expected = Collections.emptyList();
-        var result = catalog.listPartitionsByNames(prefix, database, table, listPartitionsByNamesRequest).getPartitions();
+        try {
+            catalog.getUnderlyingCatalog().createPartitions(
+                    Identifier.create(database, table),
+                    List.of(Map.of("dt", "dt_created"))
+            );
+        } catch (Exception e) {
+            throw new RuntimeException(e);
+        }
 
-        assertEquals(expected, result);
+        var partitions = catalog.listPartitions(prefix, database, table, 100, null, null).getPartitions();
+        var specs = partitions.stream().map(PartitionStatistics::spec).toList();
+        assertTrue(specs.contains(Map.of("dt", "dt_created")));
+    }
+
+    @Test
+    void dropPartitions() {
+        assumeTrue(supportsDatabases() && supportsTables() && supportsPartitions());
+
+        var createDatabaseRequest = new CreateDatabaseRequest(database, Collections.emptyMap());
+        var createTableRequest = new CreateTableRequest(Identifier.create(database, table), partitionedTableSchema());
+        catalog.createDatabase(prefix, createDatabaseRequest);
+        catalog.createTable(prefix, database, createTableRequest);
+
+        try {
+            var tableIdentifier = Identifier.create(database, table);
+            catalog.getUnderlyingCatalog().createPartitions(
+                    tableIdentifier,
+                    List.of(Map.of("dt", "dt_drop"))
+            );
+            catalog.getUnderlyingCatalog().dropPartitions(
+                    tableIdentifier,
+                    List.of(Map.of("dt", "dt_drop"))
+            );
+        } catch (Exception e) {
+            throw new RuntimeException(e);
+        }
+
+        var partitions = catalog.listPartitions(prefix, database, table, 100, null, null).getPartitions();
+        var specs = partitions.stream().map(PartitionStatistics::spec).toList();
+        assertFalse(specs.contains(Map.of("dt", "dt_drop")));
+    }
+
+    @Test
+    void alterPartitions() {
+        assumeTrue(supportsDatabases() && supportsTables() && supportsPartitions());
+
+        var createDatabaseRequest = new CreateDatabaseRequest(database, Collections.emptyMap());
+        var createTableRequest = new CreateTableRequest(Identifier.create(database, table), partitionedTableSchema());
+        catalog.createDatabase(prefix, createDatabaseRequest);
+        catalog.createTable(prefix, database, createTableRequest);
+
+        try {
+            catalog.getUnderlyingCatalog().alterPartitions(
+                    Identifier.create(database, table),
+                    List.of(new PartitionStatistics(
+                            Map.of("dt", "dt_altered"),
+                            7L,
+                            70L,
+                            3L,
+                            123L,
+                            1
+                    ))
+            );
+        } catch (Exception e) {
+            throw new RuntimeException(e);
+        }
+
+        var partitions = catalog.listPartitions(prefix, database, table, 100, null, null).getPartitions();
+        var altered = partitions.stream()
+                .filter(partition -> Map.of("dt", "dt_altered").equals(partition.spec()))
+                .findFirst()
+                .orElse(null);
+        assertNotNull(altered);
+        assertEquals(7L, altered.recordCount());
+        assertEquals(70L, altered.fileSizeInBytes());
+        assertEquals(3L, altered.fileCount());
+        assertEquals(123L, altered.lastFileCreationTime());
+        assertEquals(1, altered.totalBuckets());
     }
 
     @Test
@@ -574,8 +724,8 @@ public abstract class PaimonCatalogAdapterTest {
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createTable(prefix, database, createTableRequest);
 
-        var expected = true;
-        var result = catalog.listBranches(prefix, database, table) != null;
+        var expected = List.of("main");
+        var result = catalog.listBranches(prefix, database, table).branches();
 
         assertEquals(expected, result);
     }
@@ -589,8 +739,10 @@ public abstract class PaimonCatalogAdapterTest {
         var createBranchRequest = new CreateBranchRequest(branch, null);
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createTable(prefix, database, createTableRequest);
+        catalog.createBranch(prefix, database, table, createBranchRequest);
+        var branches = catalog.listBranches(prefix, database, table).branches();
 
-        assertDoesNotThrow(() -> catalog.createBranch(prefix, database, table, createBranchRequest));
+        assertTrue(branches.contains(branch));
     }
 
     @Test
@@ -603,8 +755,10 @@ public abstract class PaimonCatalogAdapterTest {
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createTable(prefix, database, createTableRequest);
         catalog.createBranch(prefix, database, table, createBranchRequest);
+        catalog.dropBranch(prefix, database, table, branch);
+        var branches = catalog.listBranches(prefix, database, table).branches();
 
-        assertDoesNotThrow(() -> catalog.dropBranch(prefix, database, table, branch));
+        assertFalse(branches.contains(branch));
     }
 
     @Test
@@ -618,23 +772,39 @@ public abstract class PaimonCatalogAdapterTest {
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createTable(prefix, database, createTableRequest);
         catalog.createBranch(prefix, database, table, createBranchRequest);
+        catalog.renameBranch(prefix, database, table, branch, renameBranchRequest);
+        var branches = catalog.listBranches(prefix, database, table).branches();
 
-        assertDoesNotThrow(() -> catalog.renameBranch(prefix, database, table, branch, renameBranchRequest));
+        assertFalse(branches.contains(branch));
+        assertTrue(branches.contains(renamedBranch));
     }
 
     @Test
-    void forwardBranch() {
+    void forwardBranch() throws Catalog.TableNotExistException, Catalog.TagAlreadyExistException {
         assumeTrue(supportsDatabases() && supportsTables() && supportsBranches());
 
         var createDatabaseRequest = new CreateDatabaseRequest(database, Collections.emptyMap());
         var createTableRequest = new CreateTableRequest(Identifier.create(database, table), tableSchema());
         var createBranchRequest = new CreateBranchRequest(branch, null);
         var forwardBranchRequest = new ForwardBranchRequest();
+
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createTable(prefix, database, createTableRequest);
-        catalog.createBranch(prefix, database, table, createBranchRequest);
+        triggerTableSnapshot(database, table);
 
-        assertDoesNotThrow(() -> catalog.forwardBranch(prefix, database, table, branch, forwardBranchRequest));
+        catalog.createBranch(prefix, database, table, createBranchRequest);
+        triggerTableSnapshotInBranch(database, table, branch);
+        var snapshot = catalog.getTableSnapshot(prefix, database, table);
+        var snapshotId = snapshot.getSnapshot().snapshot().id();
+
+        // paimon requires to have at least one tag on branch for fast-forward
+        catalog.getUnderlyingCatalog().createTag(new Identifier(database, table, branch), tag, snapshotId, null, true);
+
+        catalog.forwardBranch(prefix, database, table, branch, forwardBranchRequest);
+
+        var branches = catalog.listBranches(prefix, database, table).branches();
+
+        assertTrue(branches.contains(branch));
     }
 
     @Test
@@ -643,10 +813,13 @@ public abstract class PaimonCatalogAdapterTest {
 
         var createDatabaseRequest = new CreateDatabaseRequest(database, Collections.emptyMap());
         var createTableRequest = new CreateTableRequest(Identifier.create(database, table), tableSchema());
+        var createTagRequest = new CreateTagRequest(tag, null, null);
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createTable(prefix, database, createTableRequest);
+        triggerTableSnapshot(database, table);
+        catalog.createTag(prefix, database, table, createTagRequest);
 
-        var expected = Collections.emptyList();
+        var expected = List.of(tag);
         var result = catalog.listTags(prefix, database, table, 100, null, null).tags();
 
         assertEquals(expected, result);
@@ -661,8 +834,10 @@ public abstract class PaimonCatalogAdapterTest {
         var createTagRequest = new CreateTagRequest(tag, null, null);
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createTable(prefix, database, createTableRequest);
+        triggerTableSnapshot(database, table);
+        catalog.createTag(prefix, database, table, createTagRequest);
 
-        assertDoesNotThrow(() -> catalog.createTag(prefix, database, table, createTagRequest));
+        assertEquals(tag, catalog.getTag(prefix, database, table, tag).tagName());
     }
 
     @Test
@@ -674,6 +849,7 @@ public abstract class PaimonCatalogAdapterTest {
         var createTagRequest = new CreateTagRequest(tag, null, null);
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createTable(prefix, database, createTableRequest);
+        triggerTableSnapshot(database, table);
         catalog.createTag(prefix, database, table, createTagRequest);
 
         var expected = tag;
@@ -691,13 +867,15 @@ public abstract class PaimonCatalogAdapterTest {
         var createTagRequest = new CreateTagRequest(tag, null, null);
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createTable(prefix, database, createTableRequest);
+        triggerTableSnapshot(database, table);
         catalog.createTag(prefix, database, table, createTagRequest);
+        catalog.deleteTag(prefix, database, table, tag);
 
-        assertDoesNotThrow(() -> catalog.deleteTag(prefix, database, table, tag));
+        assertEquals(Collections.emptyList(), catalog.listTags(prefix, database, table, 100, null, null).tags());
     }
 
     @Test
-    void listConsumers() {
+    void listEmptyConsumers() {
         assumeTrue(supportsDatabases() && supportsTables() && supportsConsumers());
 
         var createDatabaseRequest = new CreateDatabaseRequest(database, Collections.emptyMap());
@@ -717,11 +895,21 @@ public abstract class PaimonCatalogAdapterTest {
 
         var createDatabaseRequest = new CreateDatabaseRequest(database, Collections.emptyMap());
         var createTableRequest = new CreateTableRequest(Identifier.create(database, table), tableSchema());
-        var resetConsumerRequest = new ResetConsumerRequest(uniqueName("consumer"), null);
+
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createTable(prefix, database, createTableRequest);
 
-        assertDoesNotThrow(() -> catalog.resetConsumer(prefix, database, table, resetConsumerRequest));
+        triggerTableSnapshot(database, table);
+        var snapshot = catalog.getTableSnapshot(prefix, database, table);
+        var snapshotId = snapshot.getSnapshot().snapshot().id();
+        var resetConsumerRequest = new ResetConsumerRequest(uniqueName("consumer"), snapshotId);
+
+        catalog.resetConsumer(prefix, database, table, resetConsumerRequest);
+
+        var consumers = catalog.listConsumers(prefix, database, table, 100, null).getConsumers();
+        var consumerIds = consumers.stream().map(ConsumerInfo::getConsumerId).toList();
+
+        assertEquals(List.of(resetConsumerRequest.consumerId()), consumerIds);
     }
 
     @Test
@@ -733,8 +921,10 @@ public abstract class PaimonCatalogAdapterTest {
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createView(prefix, database, createViewRequest);
 
-        var expected = true;
-        var result = catalog.listViews(prefix, database, 100, null, null).getViews().contains(view);
+        var expected = List.of(view);
+        var result = catalog.listViews(prefix, database, 100, null, null).getViews().stream()
+                .filter(expected::contains)
+                .toList();
 
         assertEquals(expected, result);
     }
@@ -746,8 +936,9 @@ public abstract class PaimonCatalogAdapterTest {
         var createDatabaseRequest = new CreateDatabaseRequest(database, Collections.emptyMap());
         var createViewRequest = new CreateViewRequest(Identifier.create(database, view), viewSchema());
         catalog.createDatabase(prefix, createDatabaseRequest);
+        catalog.createView(prefix, database, createViewRequest);
 
-        assertDoesNotThrow(() -> catalog.createView(prefix, database, createViewRequest));
+        assertEquals(view, catalog.getView(prefix, database, view).getName());
     }
 
     @Test
@@ -759,11 +950,13 @@ public abstract class PaimonCatalogAdapterTest {
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createView(prefix, database, createViewRequest);
 
-        var expected = true;
+        var expected = List.of(view);
         var result = catalog.listViewDetails(prefix, database, 100, null, null)
                 .getViewDetails()
                 .stream()
-                .anyMatch(it -> view.equals(it.getName()));
+                .map(GetViewResponse::getName)
+                .filter(expected::contains)
+                .toList();
 
         assertEquals(expected, result);
     }
@@ -777,10 +970,8 @@ public abstract class PaimonCatalogAdapterTest {
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createView(prefix, database, createViewRequest);
 
-        var expected = true;
-        var result = catalog.listViewsGlobally(prefix, database, view, 100, null)
-                .getViews()
-                .contains(Identifier.create(database, view));
+        var expected = List.of(Identifier.create(database, view));
+        var result = catalog.listViewsGlobally(prefix, database, view, 100, null).getViews();
 
         assertEquals(expected, result);
     }
@@ -809,8 +1000,9 @@ public abstract class PaimonCatalogAdapterTest {
         var alterViewRequest = new AlterViewRequest(Collections.emptyList());
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createView(prefix, database, createViewRequest);
+        catalog.alterView(prefix, database, view, alterViewRequest);
 
-        assertDoesNotThrow(() -> catalog.alterView(prefix, database, view, alterViewRequest));
+        assertEquals(view, catalog.getView(prefix, database, view).getName());
     }
 
     @Test
@@ -821,8 +1013,9 @@ public abstract class PaimonCatalogAdapterTest {
         var createViewRequest = new CreateViewRequest(Identifier.create(database, view), viewSchema());
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createView(prefix, database, createViewRequest);
+        catalog.dropView(prefix, database, view);
 
-        assertDoesNotThrow(() -> catalog.dropView(prefix, database, view));
+        assertEquals(Collections.emptyList(), catalog.listViews(prefix, database, 100, null, null).getViews());
     }
 
     @Test
@@ -834,8 +1027,11 @@ public abstract class PaimonCatalogAdapterTest {
         var renameViewRequest = new RenameTableRequest(Identifier.create(database, view), Identifier.create(database, renamedView));
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createView(prefix, database, createViewRequest);
+        catalog.renameView(prefix, renameViewRequest);
+        var views = catalog.listViews(prefix, database, 100, null, null).getViews();
 
-        assertDoesNotThrow(() -> catalog.renameView(prefix, renameViewRequest));
+        assertFalse(views.contains(view));
+        assertTrue(views.contains(renamedView));
     }
 
     @Test
@@ -843,20 +1039,14 @@ public abstract class PaimonCatalogAdapterTest {
         assumeTrue(supportsDatabases() && supportsFunctions());
 
         var createDatabaseRequest = new CreateDatabaseRequest(database, Collections.emptyMap());
-        var createFunctionRequest = new CreateFunctionRequest(
-                function,
-                Collections.emptyList(),
-                Collections.emptyList(),
-                true,
-                Map.of("sql", FunctionDefinition.sql("SELECT 1")),
-                "test function",
-                Collections.emptyMap()
-        );
+        var createFunctionRequest = functionRequest(function);
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createFunction(prefix, database, createFunctionRequest);
 
-        var expected = true;
-        var result = catalog.listFunctions(prefix, database, 100, null, null).functions().contains(function);
+        var expected = List.of(function);
+        var result = catalog.listFunctions(prefix, database, 100, null, null).functions().stream()
+                .filter(expected::contains)
+                .toList();
 
         assertEquals(expected, result);
     }
@@ -866,18 +1056,11 @@ public abstract class PaimonCatalogAdapterTest {
         assumeTrue(supportsDatabases() && supportsFunctions());
 
         var createDatabaseRequest = new CreateDatabaseRequest(database, Collections.emptyMap());
-        var createFunctionRequest = new CreateFunctionRequest(
-                function,
-                Collections.emptyList(),
-                Collections.emptyList(),
-                true,
-                Map.of("sql", FunctionDefinition.sql("SELECT 1")),
-                "test function",
-                Collections.emptyMap()
-        );
+        var createFunctionRequest = functionRequest(function);
         catalog.createDatabase(prefix, createDatabaseRequest);
+        catalog.createFunction(prefix, database, createFunctionRequest);
 
-        assertDoesNotThrow(() -> catalog.createFunction(prefix, database, createFunctionRequest));
+        assertEquals(function, catalog.getFunction(prefix, database, function).name());
     }
 
     @Test
@@ -885,23 +1068,17 @@ public abstract class PaimonCatalogAdapterTest {
         assumeTrue(supportsDatabases() && supportsFunctions());
 
         var createDatabaseRequest = new CreateDatabaseRequest(database, Collections.emptyMap());
-        var createFunctionRequest = new CreateFunctionRequest(
-                function,
-                Collections.emptyList(),
-                Collections.emptyList(),
-                true,
-                Map.of("sql", FunctionDefinition.sql("SELECT 1")),
-                "test function",
-                Collections.emptyMap()
-        );
+        var createFunctionRequest = functionRequest(function);
+
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createFunction(prefix, database, createFunctionRequest);
 
-        var expected = true;
+        var expected = List.of(function);
         var result = catalog.listFunctionDetails(prefix, database, 100, null, null)
                 .getFunctionDetails()
                 .stream()
-                .anyMatch(it -> function.equals(it.name()));
+                .map(GetFunctionResponse::name)
+                .toList();
 
         assertEquals(expected, result);
     }
@@ -911,22 +1088,12 @@ public abstract class PaimonCatalogAdapterTest {
         assumeTrue(supportsDatabases() && supportsFunctions() && supportListGlobally());
 
         var createDatabaseRequest = new CreateDatabaseRequest(database, Collections.emptyMap());
-        var createFunctionRequest = new CreateFunctionRequest(
-                function,
-                Collections.emptyList(),
-                Collections.emptyList(),
-                true,
-                Map.of("sql", FunctionDefinition.sql("SELECT 1")),
-                "test function",
-                Collections.emptyMap()
-        );
+        var createFunctionRequest = functionRequest(function);
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createFunction(prefix, database, createFunctionRequest);
 
-        var expected = true;
-        var result = catalog.listFunctionsGlobally(prefix, database, function, 100, null)
-                .functions()
-                .contains(Identifier.create(database, function));
+        var expected = List.of(Identifier.create(database, function));
+        var result = catalog.listFunctionsGlobally(prefix, database, function, 100, null).functions();
 
         assertEquals(expected, result);
     }
@@ -936,15 +1103,7 @@ public abstract class PaimonCatalogAdapterTest {
         assumeTrue(supportsDatabases() && supportsFunctions());
 
         var createDatabaseRequest = new CreateDatabaseRequest(database, Collections.emptyMap());
-        var createFunctionRequest = new CreateFunctionRequest(
-                function,
-                Collections.emptyList(),
-                Collections.emptyList(),
-                true,
-                Map.of("sql", FunctionDefinition.sql("SELECT 1")),
-                "test function",
-                Collections.emptyMap()
-        );
+        var createFunctionRequest = functionRequest(function);
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createFunction(prefix, database, createFunctionRequest);
 
@@ -959,20 +1118,13 @@ public abstract class PaimonCatalogAdapterTest {
         assumeTrue(supportsDatabases() && supportsFunctions());
 
         var createDatabaseRequest = new CreateDatabaseRequest(database, Collections.emptyMap());
-        var createFunctionRequest = new CreateFunctionRequest(
-                function,
-                Collections.emptyList(),
-                Collections.emptyList(),
-                true,
-                Map.of("sql", FunctionDefinition.sql("SELECT 1")),
-                "test function",
-                Collections.emptyMap()
-        );
+        var createFunctionRequest = functionRequest(function);
         var alterFunctionRequest = new AlterFunctionRequest(Collections.emptyList());
         catalog.createDatabase(prefix, createDatabaseRequest);
         catalog.createFunction(prefix, database, createFunctionRequest);
+        catalog.alterFunction(prefix, database, function, alterFunctionRequest);
 
-        assertDoesNotThrow(() -> catalog.alterFunction(prefix, database, function, alterFunctionRequest));
+        assertEquals(function, catalog.getFunction(prefix, database, function).name());
     }
 
     @Test
@@ -980,8 +1132,17 @@ public abstract class PaimonCatalogAdapterTest {
         assumeTrue(supportsDatabases() && supportsFunctions());
 
         var createDatabaseRequest = new CreateDatabaseRequest(database, Collections.emptyMap());
-        var createFunctionRequest = new CreateFunctionRequest(
-                function,
+        var createFunctionRequest = functionRequest(function);
+        catalog.createDatabase(prefix, createDatabaseRequest);
+        catalog.createFunction(prefix, database, createFunctionRequest);
+        catalog.dropFunction(prefix, database, function);
+
+        assertEquals(Collections.emptyList(), catalog.listFunctions(prefix, database, 100, null, null).functions());
+    }
+
+    protected CreateFunctionRequest functionRequest(String name) {
+        return new CreateFunctionRequest(
+                name,
                 Collections.emptyList(),
                 Collections.emptyList(),
                 true,
@@ -989,10 +1150,59 @@ public abstract class PaimonCatalogAdapterTest {
                 "test function",
                 Collections.emptyMap()
         );
-        catalog.createDatabase(prefix, createDatabaseRequest);
-        catalog.createFunction(prefix, database, createFunctionRequest);
+    }
 
-        assertDoesNotThrow(() -> catalog.dropFunction(prefix, database, function));
+    protected void createDatabaseAndTable() {
+        catalog.createDatabase(prefix, new CreateDatabaseRequest(database, Collections.emptyMap()));
+        catalog.createTable(prefix, database, new CreateTableRequest(Identifier.create(database, table), tableSchema()));
+    }
+
+    protected void triggerTableSnapshot(String database, String table) {
+        try {
+            var paimonCatalog = catalog.getUnderlyingCatalog();
+            var paimonTable = paimonCatalog.getTable(Identifier.create(database, table));
+            var writeBuilder = paimonTable.newBatchWriteBuilder();
+
+            try (var tableWrite = writeBuilder.newWrite();
+                 var tableCommit = writeBuilder.newCommit()) {
+                tableWrite.write(GenericRow.of(1));
+                tableCommit.commit(tableWrite.prepareCommit());
+            }
+        } catch (Exception e) {
+            throw new RuntimeException("Failed to trigger table snapshot for " + database + "." + table, e);
+        }
+    }
+
+    protected void triggerTableSnapshotAltered(String database, String table) {
+        try {
+            var paimonCatalog = catalog.getUnderlyingCatalog();
+            var paimonTable = paimonCatalog.getTable(Identifier.create(database, table));
+            var writeBuilder = paimonTable.newBatchWriteBuilder();
+
+            try (var tableWrite = writeBuilder.newWrite();
+                 var tableCommit = writeBuilder.newCommit()) {
+                tableWrite.write(GenericRow.of(1, 2));
+                tableCommit.commit(tableWrite.prepareCommit());
+            }
+        } catch (Exception e) {
+            throw new RuntimeException("Failed to trigger table snapshot for " + database + "." + table, e);
+        }
+    }
+
+    protected void triggerTableSnapshotInBranch(String database, String table, String branch) {
+        try {
+            var paimonCatalog = catalog.getUnderlyingCatalog();
+            var paimonTable = paimonCatalog.getTable(new Identifier(database, table, branch));
+            var writeBuilder = paimonTable.newBatchWriteBuilder();
+
+            try (var tableWrite = writeBuilder.newWrite();
+                 var tableCommit = writeBuilder.newCommit()) {
+                tableWrite.write(GenericRow.of(1));
+                tableCommit.commit(tableWrite.prepareCommit());
+            }
+        } catch (Exception e) {
+            throw new RuntimeException("Failed to trigger table snapshot for " + database + "." + table, e);
+        }
     }
 
     protected String uniqueName(String prefix) {
@@ -1007,6 +1217,35 @@ public abstract class PaimonCatalogAdapterTest {
                 Collections.emptyMap(),
                 "test"
         );
+    }
+
+    protected Schema partitionedTableSchema() {
+        return new Schema(
+                List.of(
+                        new DataField(0, "id", DataTypes.INT()),
+                        new DataField(1, "dt", DataTypes.STRING())
+                ),
+                List.of("dt"),
+                Collections.emptyList(),
+                Collections.emptyMap(),
+                "partitioned-test"
+        );
+    }
+
+    protected void triggerPartitionedTableSnapshot(String database, String table, int id, String dt) {
+        try {
+            var paimonCatalog = catalog.getUnderlyingCatalog();
+            var paimonTable = paimonCatalog.getTable(Identifier.create(database, table));
+            var writeBuilder = paimonTable.newBatchWriteBuilder();
+
+            try (var tableWrite = writeBuilder.newWrite();
+                 var tableCommit = writeBuilder.newCommit()) {
+                tableWrite.write(GenericRow.of(id, BinaryString.fromString(dt)));
+                tableCommit.commit(tableWrite.prepareCommit());
+            }
+        } catch (Exception e) {
+            throw new RuntimeException("Failed to trigger partitioned table snapshot for " + database + "." + table, e);
+        }
     }
 
     protected ViewSchema viewSchema() {
